--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </main>
     <footer>
-        <img src="assets/img/icons8-kuromi.svg" alt="kuromi logo" class="footer-icon">
+        <img src="assets/img/" alt="kuromi logo" class="footer-icon">
         <p>&copy; 2024 Hero styles, static anad animated</p>
     </footer>
 </body>
