--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="assets/img/icons8-my-melody.svg" alt="my melody logo" class="logo">
+        <img src="assets/img/cat-1274094_1280.svg" alt="My Cat Logo" class="logo">
         <h1>Hero & Card</h1>
         <h2>Hands on 2</h2>
     </header>
@@ -21,7 +21,7 @@
 
     </main>
     <footer>
-        <img src="assets/img/" alt="kuromi logo" class="footer-icon">
+        <img src="assets/img/cat-1274094_1280.png" alt="Cat Logo" class="footer-icon">
         <p>&copy; 2024 Hero styles, static anad animated</p>
     </footer>
 </body>
