--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
     <footer>
         <img src="assets/img/cat-1274094_1280.png" alt="Cat Logo" class="footer-icon">
-        <p>&copy; 2024 Hero styles, static anad animated</p>
+        <p>&copy; 2024 Hero styles, static and animated</p>
     </footer>
 </body>
 </html>
