--- a/pages/page1/index.html
+++ b/pages/page1/index.html
@@ -13,11 +13,9 @@
   <section id="hero-1" class="hero">
     <div class="container">
       <div class="info">
-        <h1>Orange Cat</h1>
-        <h2>also known as ginger or marmalade cats, have fur that ranges from light golden to deep reddish-orange. Their coat can be solid orange or have tabby patterns with stripes or swirls. They often have green or gold eyes. Orange cats are usually male due to genetics. They're known for friendly, outgoing personalities and are popular in folklore and media.</h2>
-        <p>
-          “Hi.
-        </p>
+        <h1>Travis Scott Air Jordan 4</h1>
+        <h2>a popular sneaker collaboration featuring a blue suede upper with black and grey accents. It includes Travis Scott's "Cactus Jack" branding and is based on the classic Air Jordan 4 design. Released in 2018, it quickly became a highly sought-after shoe among sneaker enthusiasts due to its unique colorway and limited availability.</h2>
+
         <a href="../../index.html">Click Me</a>
       </div>
     </div>
@@ -61,9 +59,9 @@
   <section id="hero-4" class="hero">
     <div class="container">
       <div class="info">
-        <h1>Initial D Style</h1>
-        <h2>Feel the thrill of the race!</h2>
-        <p>Step into the world of high-speed drift racing with Initial D Style. Customize your cars, challenge opponents, and dominate the leaderboard.</p>
+        <h1>The Witcher 3 Movie</h1>
+        <h2>"The Witcher: Hunt for the Wild"</h2>
+        <p>A grizzled monster hunter, Geralt of Rivia, embarks on a perilous quest across a war-torn medieval realm. Battling mythical beasts and political intrigue, he searches for his adopted daughter while unraveling a world-altering prophecy. Swordplay, sorcery, and moral choices define this gritty fantasy epic.</p>
         <div class="buttons">
           <a href="../../index.html" class="primary-btn">Play Now</a>
           <a href="../../index.html" class="secondary-btn">Learn More</a>
