--- a/pages/page3/index.html
+++ b/pages/page3/index.html
@@ -10,11 +10,11 @@
 
   <div class="card watch-card">
     <div class="card-image">
-      <img src="https://i.ebayimg.com/images/g/94QAAOSw2JVjnesN/s-l400.jpg" alt="Watch Image">
+      <img src="https://wallpaperaccess.com/full/431764.jpg" alt="Watch Image">
     </div>
     <div class="card-content">
-      <h2>Rolex</h2>
-      <p class="price">$20000</p>
+      <h2>Gaming Computer</h2>
+      <p class="price">$2000</p>
       <div class="buttons">
         <a href="../../index.html" class="btn btn-watch">Details</a>
         <a href="../../index.html" class="btn btn-watch">Add to Cart</a>
