--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-        <img src="assets/img/cat-1274094_1280.svg" alt="My Cat Logo" class="logo">
+        <img src="assets/img/cat-1274094_1280.png" alt="My Cat Logo" class="logo">
         <h1>Hero & Card</h1>
         <h2>Hands on 2</h2>
     </header>
     <main>
-        <p>This project showcases different hero and card styles, both static and animated, created using pure HTML, CSS, and JavaScript.</p>
+        <p>This website demonstrates a variety of hero sections and card designs, featuring both static and animated versions. All components are crafted using only HTML, CSS, and JavaScript, showcasing the power and flexibility of these core web technologies.</p>
         <button onclick="location.href='pages/page1/index.html'">Hero Gallery</button>
         <button onclick="location.href='pages/page2/index.html'">Card Gallery</button>
         <button onclick="location.href='pages/page3/index.html'">Animated Card Gallery</button>
